--- a/themes/toomby/src/package.json
+++ b/themes/toomby/src/package.json
@@ -4,7 +4,7 @@
   "description": "Official ZURB Template for Foundation for Sites.",
   "main": "gulpfile.js",
   "scripts": {
-    "build": "gulp build --production"
+    "start": "gulp build --production"
   },
   "author": "ZURB <foundation@zurb.com>",
   "license": "MIT",
