--- a/themes/toomby/src/config.yml
+++ b/themes/toomby/src/config.yml
@@ -18,11 +18,11 @@ UNCSS_OPTIONS:
 # Gulp will reference these paths when it copies files
 PATHS:
   # Path to dist folder
-  dist: "../dist"  
+  dist: "../dist"
   # Paths to static assets that aren't images, CSS, or JavaScript
   assets:
-    - "src/assets/**/*"
-    - "!src/assets/{img,js,scss}/**/*"
+    - "assets/**/*"
+    - "!assets/{img,js,scss}/**/*"
   # Paths to Sass libraries, which can then be loaded with @import
   sass:
     - "bower_components/foundation-sites/scss"
@@ -58,5 +58,5 @@ PATHS:
     - "bower_components/foundation-sites/js/foundation.tooltip.js"
     - "bower_components/foundation-sites/js/foundation.zf.responsiveAccordionTabs.js"
     # Paths to your own project code are here
-    - "src/assets/js/!(app).js"
-    - "src/assets/js/app.js"
+    - "assets/js/!(app).js"
+    - "assets/js/app.js"
