Removed incorrect files and added scripts to compile to the themes/dist/ dir

--- a/static/config.yml
+++ b/static/config.yml
@@ -18,7 +18,8 @@ UNCSS_OPTIONS:
 # Gulp will reference these paths when it copies files
 PATHS:
   # Path to dist folder
-  dist: "dist"  
+  dist: "dist"
+  dist_theme: "../themes/toomby/dist"  
   # Paths to static assets that aren't images, CSS, or JavaScript
   assets:
     - "src/assets/**/*"
