--- a/static/package.json
+++ b/static/package.json
@@ -5,7 +5,8 @@
   "main": "gulpfile.js",
   "scripts": {
     "start": "gulp",
-    "build": "gulp build --production"
+    "build": "gulp build --production",
+    "dist": "gulp dist --production"
   },
   "author": "ZURB <foundation@zurb.com>",
   "license": "MIT",
